# Recipes

./: .gitignore  BakedSalmon.md  Cargo.toml  DaylanKoefte.md  KoreanFriedTofu.md  LemonRisotto.md  Makefile  PeanutTofuNoodles.md  README.md  build.py  build.sh  build_index.sh  build_tags.py  index.html  main.css  main.js  newRecipe.sh  scraper.py  tag_overview.html  tags.html
Recipes/: Aburaage.md  Aioli.md  AlooGobi.md  AlooParatha.md  AppleSauce.md  AquafabaMayonaise.md  AvjarKebabSauce.md  AvocadoPastaSalad.md  BLTFlatbread.md  Bagels.md  Baguette.md  BakedSalmon.md  BakedTofu.md  BananaNutellaMilkshake.md  BananaOatCookies.md  Baozi.md  BavarianHotdogs.md  BeanPatties.md  BeetrootSalad.md  BigMacSauce.md  BlackBeanBurgerPatties.md  BlackBeanWraps.md  BlueberryMuffins.md  BombayPotatoes.md  Brioche.md  BroccoliPasta.md  BroccoliPesto.md  BrownieBites.md  BrownieMuffins.md  Bruschetta.md  BurgerBuns.md  BurgerSauce.md  ButternutSquashPasta.md  CandiedNuts.md  Carbonara.md  CarrotSoup.md  CheeseCake.md  Cheesecake.md  CheesecakeBrownies.md  CherryChocolateCake.md  (+198 more)
html/: main.css  main.js
html_templates/: header.html  index.html  recipe.html  tag.html  tag_overview.html
old/: Makefile  build.py
recipes/: Aburaage.html  Aioli.html  AlooGobi.html  AlooParatha.html  AppleSauce.html  AquafabaMayonaise.html  AvjarKebabSauce.html  AvocadoPastaSalad.html  BLTFlatbread.html  Bagels.html  Baguette.html  BakedSalmon.html  BakedTofu.html  Banana-OatCookies.html  BananaNutellaMilkshake.html  Baozi.html  (+243 more)
render_recipes/: Cargo.toml
render_recipes/src/: main.rs  renderer.rs
(+122 files in other folders)
