[package]
name = "render_recipes"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "render_recipes"
path = "src/main.rs"

[dependencies]
recipes = { path = "../lib/recipes/" }
parse_markdown = { path = "../lib/parse_markdown" }
pages = { path = "../lib/pages" }

html = { git = "https://github.com/MarcoTz/rust-html.git" }
